fixade bild storlek i rad 78

--- a/css/style.css
+++ b/css/style.css
@@ -52,15 +52,15 @@ aside {
     display:flex;
     justify-content: center;
     border: solid black 1px;
-    margin: 1rem;
+    /* margin: .5rem; */
 }
 
 aside a {
     text-decoration: none;
     margin: 10px;
     color: #000000;
-
-    padding: .3rem 1rem;
+    
+    padding: .3rem .5rem;
 }
 
 
@@ -71,22 +71,18 @@ aside a {
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-
-img {
-    mix-blend-mode: multiply;
+    margin-top: .8rem;
 }
 
 
 /* här är flex: 1 1 45% samma sak som flex:growth 1; flex:shrink 1; flex-basis: 45%; */
 .best-sellers article {
-    flex: 1 1 40%;
-
+flex: 1 1 40%;
 }
 
 .best-sellers img {
     width: clamp(30%, 70%, 90%);
-    height: clamp(15rem, 20rem, 25rem);
+    /* height: clamp(15%, 20%, 25%); */
     /* här va vi tvugna att använda rem istället för % då våra bilder hade olika heights. Det fick texten under att bli ojämn med andra produkter. */
 }
 
