--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.headergrid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    text-align: center;
+}
+
 .grid {
     display: grid;
     grid-template-columns: 1fr;
@@ -13,10 +20,15 @@ body {
 
 header nav {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     background-color: #848484;
+}
+
+#logotyp {
+    width: 10%;
 }
 
 nav li {
@@ -110,38 +122,50 @@ footer {
         flex-wrap: nowrap;
 
     }
-
-
-    header {
-        display: flex;
-    }
-
-
-    header nav {
-        display: flex;
-        justify-content: space-around;
-        background-color: #848484;
-
-    }
-    nav ul{
-        display: flex;
-        flex-direction: row;
-        text-align: center;
-
-    }
-    nav a{
-
-        text-align: center;
-
-    }
-
-    nav img{
-        margin-left: auto 0 ;
-    }
-
-   
     .best-sellers-article  {
         flex: 1 1 25%;
 
     }
+
+
+    header.headergrid {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        margin: 0;
+    }
+    header nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: #848484;
+        padding: 0;
+        margin: 0;
+    }
+
+
+
+    nav ul {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    #logotyp {
+        width: 10%;
+        margin-right: auto;
+    }
+
+    
+    .logo-bottom {
+        width: 10%;
+    }
+
+
+
+
+
+   
+
 }
