--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,20 @@ body {
     text-align: center;
 }
 
+.contact-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    text-align: center;
+}
+
+.contact-grid2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    text-align: center;
+}
+
 header nav {
     display: flex;
     flex-direction: column;
@@ -53,7 +67,7 @@ nav a {
 
 #hero-img {
     /* Resize så påverkar clamp så att bilden inte blir för stor eller liten. */
-   width: clamp(30%, 50%, 70%);
+   width: 100%;
 }
 
 .index-article p {
@@ -104,7 +118,8 @@ aside ul {
 }
 
 .best-sellers-home article img{
-    width: clamp(30%, 50%, 70%);
+    /* Fixed width så att bilderna inte stretchar, då vi hade olika storlek på orginal bilder och inte samma. */
+    width:252px;
    /* Alla bilder får fixed height, så det passar och ser finare ut. */
     height: 252px;
     
@@ -179,20 +194,87 @@ footer {
         /* margin-right 1% så att den inte fastnar vid höger kant, det ska se snyggt ut. */
         margin-right: 1%;
     }
-    #logotyp {
-        width: clamp(12%, 13%, 15%);
+    nav a {
+        width: clamp(15%, 20%, 25%);
         margin-right: auto;
-                /* margin-right 1% så att den inte fastnar vid vänster kant, det ska se snyggt ut. */
-        margin-left: 1%;
     }
+
     .logo-bottom {
         width: clamp(9%, 10%, 11%);
     }
+
+    .contact-header {
+        grid-column: auto / span 6;
+    }
+    .index-article {
+        grid-column: auto / span 2;
+        justify-self: center;
+    }
+    .index-article-bottom { 
+        grid-column: auto / span 3;
+        width: 75%;
+        justify-self: center;
+    }
+
+
+    .contact-grid {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: auto 1fr 1fr;
+        gap: 1rem;
+        text-align: center;
+        font-size: clamp(.6rem, .7rem, 1.5rem);
+    }
+ 
+    
+    .contact-grid2 {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        text-align: center;
+    }
 }
+
+
 
 @media (min-width:1024px) {
     .best-sellers article {
         flex-basis: calc(25% - 10px); /* Adjusts width to 3 images per row, minus the gap */
+    }
+    #hero-img {
+        /* Resize så påverkar clamp så att bilden inte blir för stor eller liten. */
+       width: clamp(75%, 80%, 90%);
+    }
+    
+
+    .contact-header {
+        grid-column: auto / span 6;
+    }
+    .index-article {
+        grid-column: auto / span 2;
+    }
+    .index-article-bottom { 
+        grid-column: auto / span 3;
+        width: 75%;
+        justify-self: center;
+    }
+
+
+    .contact-grid {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: auto 1fr 1fr;
+        gap: 1rem;
+        text-align: center;
+        font-size: clamp(.6rem, .7rem, 1.5rem);
+    }
+ 
+    
+    .contact-grid2 {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        text-align: center;
     }
 
 }
