--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
     text-align: center;
 }
 
+#logotyp {
+    width: 40%;
+}
+
 .contact-grid {
     display: grid;
     grid-template-columns: 1fr;
@@ -41,8 +45,12 @@ header nav {
     background-color: #848484;
 }
 
-#logotyp {
-    width: 25%;
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
 }
 
 nav li {
@@ -74,6 +82,7 @@ nav a {
     padding: 0.4rem 1rem;
 }
 
+
 /* lades till aside och aside a */
 aside {
     display:flex;
@@ -86,7 +95,6 @@ aside a {
     text-decoration: none;
     margin: 10px;
     color: #000000;
-    
     padding: .3rem .5rem;
 }
 
@@ -97,7 +105,6 @@ aside ul {
     padding: .3rem .5rem;
     display:flex;
     justify-content: center;
-
     list-style-type: none;
 }
 
@@ -110,10 +117,14 @@ aside ul {
     align-items: center;
     text-align: center;
     margin-top: .8rem;
+    gap: 0.7rem;
+    padding: 2rem;
 }
 
 .best-sellers-home article{
     flex: 1 1 40%;
+    box-shadow: 1px 1px 6px rgba(0,0,0, 0.5);
+
     
 }
 
@@ -122,6 +133,7 @@ aside ul {
     width:252px;
    /* Alla bilder får fixed height, så det passar och ser finare ut. */
     height: 252px;
+    margin-top: 20px;
     
 }
 .best-sellers {
@@ -131,10 +143,12 @@ aside ul {
     align-items: center;
     text-align: center;
     margin-top: .8rem;
-    
-    
+    gap: .4rem;
 }
 
+.best-sellers article {
+    box-shadow: 1px 1px 6px rgba(0,0,0, 0.5);
+}
 
 .best-sellers img {
     width: clamp(30%, 70%, 90%);
@@ -245,7 +259,17 @@ footer {
         /* Resize så påverkar clamp så att bilden inte blir för stor eller liten. */
        width: clamp(75%, 80%, 90%);
     }
+
+    h1 {
+        font-size: clamp(1.5rem, .7rem, 2rem);
+
+    }
     
+    /* adjusts layout width, giving it margin on all fours sides */
+    main {
+        width: 90vw;
+        margin: 5% auto;
+    }
 
     .contact-header {
         grid-column: auto / span 6;
