--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ body {
 
 .googlemap {
     width: 100%;
-
 }
 
 header nav {
@@ -84,7 +83,6 @@ nav a {
 }
 
 #hero-img {
-    /* Resize så påverkar clamp så att bilden inte blir för stor eller liten. */
    width: 100%;
 }
 
@@ -165,13 +163,7 @@ aside ul {
 .best-sellers img {
     width: clamp(30%, 70%, 90%);
     height: 252px;
-    /* height: clamp(15%, 20%, 25%); */
-    /* här va vi tvugna att använda rem istället för % då våra bilder hade olika heights. Det fick texten under att bli ojämn med andra produkter. */
 }
-
-
-
-
 
 footer {
     display: flex;
@@ -185,7 +177,6 @@ footer {
 .logo-bottom {
     width: 20%;
 }
-
 
 
 @media (min-width:426px) and (max-width:768px){
@@ -252,7 +243,7 @@ footer {
     .logo-bottom {
         width: clamp(9%, 10%, 11%);
     }
-        /* Detta skapar en grid layout där huvudrubriker */
+        /* Detta skapar en grid layout där huvudrubriken stretchar över hela översta raden. Med sex kolumner lyckades vi lägga två stycken av dessa articlar på tredje raden, med width 75% kunde vi justera en likgiltig storlek*/
     .contact-header {
         grid-column: auto / span 6;
     }
@@ -265,7 +256,7 @@ footer {
         width: 75%;
         justify-self: center;
     }
-
+    /*  */
 
     .contact-grid {
         display: grid;
