--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 
 .googlemap {
     width: 100%;
+
 }
 
 header nav {
@@ -63,7 +64,8 @@ p {
 }
 
 nav li {
-    border: 1px solid #000;
+    border: 1px solid #ffffff;
+    background-color: black;
     margin: 10px;
     padding: .3rem 1rem;
 
@@ -169,9 +171,13 @@ footer {
     display: flex;
     justify-content: space-around;
     background-color: #848484;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 2rem 1rem;
     align-items: center;
+}
+
+footer p{
+    background-color: #000000;
 }
 
 .logo-bottom {
